# rust_axum_web_api_demo

./: .env  .gitignore  Cargo.toml  README.en.md  README.md  docker-compose-mysql.yaml
src/: db_test.rs  main.rs  main2.rs  main9.rs  main_sess.rs  main_svg.rs  main_test.rs
src/api/: comm_api.rs  hello.rs  hello_api.rs  login_api.rs  mod.rs  resp.rs  role_api.rs  user.rs  user_api.rs
src/controllers/: hello.rs  login.rs  mod.rs  role.rs  user.rs
src/db/: mod.rs  permission_model.rs  profile_model.rs  role_model.rs  role_permissions_permission.rs  schema.rs  user_model.rs  user_roles_role_model.rs
src/middleware/: auth.rs
src/routers/: mod.rs
src/tools/: jwt.rs  mod.rs
tests/: http_test.rs  tools_test.rs
