[package]
name = "rust_api_v2"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1.27", features = ["full"] }
hyper="0.14.25"
serde = { version = "1.0.16", features = ["derive"] }
validator = { version = "0.16", features = ["derive"] }
diesel = { version = "2.1.4", features = ["mysql"] }
lazy_static = "1.4"


