[package]
name = "rust_api_v2"
version = "0.0.1"
edition = "2021"

[dependencies]
axum = "0.6"
time="0.3"
tokio = { version = "1.27", features = ["full"] }
hyper="0.14.25"
serde = { version = "1.0.16", features = ["derive"] }
validator = { version = "0.16", features = ["derive"] }
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
sqlx = { version = "0.6", features = ["mysql", "runtime-tokio-rustls","time"] }
mysql="24"